[tool.poetry]
name = "zenml-experiments"
version = "0.1.0"
description = ""
authors = ["azza <azza.baatout@adesso.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
zenml = "^0.58.2"
keras = ">=2.10.0,<2.11"
numpy = "^1.24.3"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
jupyter = "^1.0.0"
tensorflow = "^2.16.1"
tensorflow-io-gcs-filesystem = "^0.37.0"  # Adjust this version if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
